<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="function"
            type="com.example.blissapplicationchallenge.ui.main.MainActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.main.MainActivity">


            <Button
                android:id="@+id/btnRandomEmoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="@{()-> function.onGetRandomEmoji()}"
                android:text="@string/random_emoji"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background" />

            <Button
                android:id="@+id/btnEmojiList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> function.navToEmojiListActivity()}"
                android:text="@string/emoji_list"
                app:layout_constraintEnd_toEndOf="@+id/btnRandomEmoji"
                app:layout_constraintStart_toStartOf="@+id/btnRandomEmoji"
                app:layout_constraintTop_toBottomOf="@+id/btnRandomEmoji" />

            <EditText
                android:id="@+id/editTxtAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/btnEmojiList"
                app:layout_constraintStart_toStartOf="@+id/btnEmojiList"
                app:layout_constraintTop_toBottomOf="@+id/btnEmojiList"
                android:importantForAutofill="no"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> function.onSearchAvatar()}"
                app:layout_constraintBottom_toBottomOf="@+id/editTxtAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTxtAvatar"
                app:layout_constraintTop_toTopOf="@+id/editTxtAvatar"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <Button
                android:id="@+id/btnAvatarList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="@{() -> function.navToAvatarListActivity()}"
                android:text="@string/avatar_list"
                app:layout_constraintEnd_toEndOf="@+id/btnEmojiList"
                app:layout_constraintStart_toStartOf="@+id/btnEmojiList"
                app:layout_constraintTop_toBottomOf="@+id/editTxtAvatar" />

            <Button
                android:id="@+id/btnGooleRepos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> function.navToGoogleReposActivity()}"
                android:text="@string/google_repos"
                app:layout_constraintEnd_toEndOf="@+id/btnAvatarList"
                app:layout_constraintStart_toStartOf="@+id/btnAvatarList"
                app:layout_constraintTop_toBottomOf="@+id/btnAvatarList" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="158dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>